created teacher && student, course-builder start

--- a/src/app/ui/header/header.component.html
+++ b/src/app/ui/header/header.component.html
@@ -3,6 +3,8 @@
     <a routerLink="home"><h1><img src="./assets/img/logo.png" alt="logo"></h1></a>
 
     <div class="auth">
+      <a class="auth-btn" routerLink="student" routerLinkActive="active">Student</a>
+      <a class="auth-btn" routerLink="teacher" routerLinkActive="active">Teacher</a>
       <a class="auth-btn" routerLink="login" routerLinkActive="active">Login</a>
       <a class="auth-btn" routerLink="register" routerLinkActive="active">Register</a>
     </div>
