befor work on interceptor

--- a/src/app/teacher/pages/teacher/teacher.component.html
+++ b/src/app/teacher/pages/teacher/teacher.component.html
@@ -2,3 +2,14 @@
   teacher works!
 </p>
 <app-create-course></app-create-course>
+
+<div class="teacher-courses" *ngIf="arrMyCourses.length>0; else noCourses">
+  <h2 class="teacher-courses__title">ВАШИ КУРСЫ:</h2>
+
+</div>
+<ng-template #noCourses>
+  <h2 class="teacher-courses__title">ВЫ ЕЩЕ НЕ СОЗДАЛИ НИ ОДНОГО КУРСА</h2>
+</ng-template>
+
+
+
