--- a/src/app/teacher/pages/teacher/teacher.component.html
+++ b/src/app/teacher/pages/teacher/teacher.component.html
@@ -7,12 +7,13 @@
   <h2 class="teacher-courses__title">ВАШИ КУРСЫ:</h2>
   <ul class="teacher-courses__list">
     <li class="teacher-courses__list-item" *ngFor="let course of arrMyCourses">
-      <a class="teacher-course-card" routerLink="">
+      <a class="teacher-course-card" routerLink="builder/{{course.id}}">
         <div class="teacher-course-card__head">
           <img src="{{course.imgUrl}}" alt="preview">
         </div>
         <div class="teacher-course-card__main">
-          <h3 class="teacher-course-card__title">{{course.title}}</h3>
+          <p>id_{{course.id}}</p>
+          <h3 class="teacher-course-card__title">{{course.name}}</h3>
           <p class="teacher-course-card__teacher">
             {{course.teacher}}
           </p>
