--- a/src/app/teacher/pages/teacher/teacher.component.scss
+++ b/src/app/teacher/pages/teacher/teacher.component.scss
@@ -25,6 +25,7 @@
   box-shadow: 0 0 1px 1px rgba(20, 23, 28, 0.1), 0 3px 1px 0 rgba(20, 23, 28, 0.1);
   display: flex;
   flex-direction: column;
+  text-decoration: none;
 
   &:hover {
     box-shadow: 0 0 3px 3px rgba(20, 23, 28, 0.2), 0 5px 5px 0 rgba(20, 23, 28, 0.2);
