--- a/src/app/teacher/components/create-course/create-course.component.html
+++ b/src/app/teacher/components/create-course/create-course.component.html
@@ -2,5 +2,5 @@
   <h2 class="create-course__title">
     Перейти к созданию курса
   </h2>
-  <a class="create-course__btn" routerLink="register" routerLinkActive="active">Создайте свой курс</a>
+  <a class="create-course__btn" routerLink="register">Создайте свой курс</a>
 </div>
