--- a/src/app/teacher/pages/course-builder/course-builder.component.html
+++ b/src/app/teacher/pages/course-builder/course-builder.component.html
@@ -1,1 +1,5 @@
-<h1>COURSE BUILDER</h1>
+<main class="course-builder">
+
+    <a class="course-builder__btn-back" routerLink="/teacher"><</a>
+    <input class="course-builder__title" [(ngModel)]="course.name" name="name" type="text" required="required">
+</main>
