--- a/src/app/teacher/pages/course-register/course-register.component.html
+++ b/src/app/teacher/pages/course-register/course-register.component.html
@@ -1,6 +1,7 @@
 <div class="course-builder">
   <h2 class="course-builder__title">CREATE NEW COURSE</h2>
   <form class="course-builder__form">
+  <!--<form [formGroup]="form" class="course-builder__form">-->
     <p>название курса:</p>
     <input [(ngModel)]="course.name" name="name" type="text" required="required">
 
