--- a/src/app/teacher/pages/course-builder/course-builder.component.scss
+++ b/src/app/teacher/pages/course-builder/course-builder.component.scss
@@ -1,16 +1,29 @@
 .course-builder{
-  max-width: 600px;
+  max-width: 1200px;
   margin: 0 auto;
-  &__form{
+  padding: 20px 30px;
+
+  &__btn-back{
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    text-decoration: none;
+    border: 1px solid gray;
     display: flex;
-    flex-direction: column;
-    input{
-      min-height: 50px;
-      width: 100%;
-      border: 1px solid grey;
-      padding: 20px;
-      margin-bottom: 20px;
+    align-items: center;
+    justify-content: space-evenly;
+    box-shadow: 0 0 3px lightgray;
+    &:hover{
+      background: lightgray;
     }
+  }
+
+  &__title{
+    width: 100%;
+    text-align: center;
+    font-size: 30px;
+    border: 0;
+    padding: 30px 0;
   }
 }
 
