--- a/src/app/shared/course-card/course-card.component.html
+++ b/src/app/shared/course-card/course-card.component.html
@@ -1,3 +1,27 @@
-<p>
-  course-card works!
-</p>
+<li class="teacher-courses__list-item">
+  <!--<a class="teacher-course-card" routerLink="builder/{{course.id}}">-->
+  <a class="teacher-course-card">
+    <div class="teacher-course-card__head">
+      <img [src]="course.imgUrl" alt="preview">
+    </div>
+    <div class="teacher-course-card__main">
+      <p>id_{{course.id}}</p>
+      <h3 class="teacher-course-card__title">{{course.name}}</h3>
+      <p class="teacher-course-card__teacher">
+        {{course.teacher}}
+      </p>
+      <p class="teacher-course-card__ratings">
+        <span class="teacher-course-card__rating-star">{{course.ratingStar}}</span>
+        <span class="teacher-course-card__rating-votes">({{course.ratingVotes}})</span>
+
+      </p>
+      <p class="teacher-course-card__prices" *ngIf="course.priceDiscount>0">
+        <span class="teacher-course-card__priceOld">{{course.price}} $</span>
+        <span class="teacher-course-card__price">{{course.priceDiscount}} $</span>
+      </p>
+      <p class="teacher-course-card__prices" *ngIf="course.priceDiscount==0">
+        <span class="teacher-course-card__price">{{course.price}} $</span>
+      </p>
+    </div>
+  </a>
+</li>
