--- a/src/app/teacher/pages/course-builder/course-builder.component.scss
+++ b/src/app/teacher/pages/course-builder/course-builder.component.scss
@@ -18,12 +18,19 @@
     }
   }
 
-  &__title{
+  &__name{
     width: 100%;
     text-align: center;
     font-size: 30px;
-    border: 0;
-    padding: 30px 0;
+    border: 1px solid grey;
+  }
+
+  &__description{
+    width: 100%;
+    min-height: 200px;
+    font-size: 30px;
+    padding: 10px;
+    border: 1px solid grey;
   }
 }
 
