--- a/src/app/teacher/pages/teacher/teacher.component.html
+++ b/src/app/teacher/pages/teacher/teacher.component.html
@@ -32,8 +32,7 @@
         </div>
       </a>
     </li>
-
-    <!--<course-item *ngFor="let course of arrMyCourses" [course]="course"></course-item>-->
+    <!--<app-course-card *ngFor="let course of arrMyCourses" [course]="course"></app-course-card>-->
   </ul>
 </div>
 <ng-template #noCourses>
