--- a/src/app/student/pages/student/student.component.scss
+++ b/src/app/student/pages/student/student.component.scss
@@ -1,6 +1,8 @@
-.teacher-courses {
-  text-align: center;
-  padding-top: 50px;
+.top-courses {
+  &__list {
+    text-align: center;
+    padding-top: 50px;
+  }
 
   &__list {
     display: flex;
@@ -10,14 +12,13 @@
     list-style: none;
     padding: 0 0 100px;
   }
-  &__list-item{
+
+  &__list-item {
     flex-basis: 260px;
     padding: 15px;
   }
-  &__list-item-link{
+
+  &__list-item-link {
 
   }
 }
-
-
-
