--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-header></app-header>
-<router-outlet></router-outlet>
+<main>
+    <router-outlet></router-outlet>
+</main>
