--- a/src/app/shared/course-preview/course-preview.component.scss
+++ b/src/app/shared/course-preview/course-preview.component.scss
@@ -28,6 +28,7 @@
     align-items: center;
     justify-content: space-evenly;
     box-shadow: 0 0 3px lightgray;
+    cursor: pointer;
     &:hover{
       background: lightgray;
     }
