students subscribes done

--- a/src/app/shared/course-preview/course-preview.component.html
+++ b/src/app/shared/course-preview/course-preview.component.html
@@ -7,5 +7,5 @@
   <p class="course__description">{{course.description}}</p>
   <!--<input class="course-builder__name" [(ngModel)]="course.name" name="name" type="text" required="required">-->
   <!--<textarea class="course-builder__description" [(ngModel)]="course.description" placeholder="PLEASE WRITE COURSE DESCRIPTION"></textarea>-->
-  <button (click)="onSubscribe">SUBSCRIBE</button>
+  <button (click)="onSubscribe()">SUBSCRIBE</button>
 </div>
