--- a/src/app/student/pages/student/student.component.html
+++ b/src/app/student/pages/student/student.component.html
@@ -1,8 +1,8 @@
 <div class="student">
-    <div class="teacher-courses" *ngIf="arrMyCourses.length>0; else noCourses">
+    <div class="teacher-courses" *ngIf="arrSubscribedCourses.length>0; else noCourses">
         <h2 class="teacher-courses__title">ВАШИ КУРСЫ:</h2>
         <ul class="teacher-courses__list">
-            <li class="teacher-courses__list-item" *ngFor="let course of arrMyCourses">
+            <li class="teacher-courses__list-item" *ngFor="let course of arrSubscribedCourses">
                 <a class="teacher-courses__list-item-link" routerLink="builder/{{course.id}}">
                     <app-course-card [course]="course"></app-course-card>
                 </a>
