--- a/src/app/teacher/pages/course-builder/course-builder.component.html
+++ b/src/app/teacher/pages/course-builder/course-builder.component.html
@@ -3,17 +3,28 @@
         <a class="course-builder__btn-back" routerLink="/teacher"><</a>
         <button (click)="updateCourse()" class="course-builder__btn-save">SAVE</button>
     </div>
-    <p>COURSE NAME:</p>
-    <input class="course-builder__name" [(ngModel)]="course.name" name="name" type="text" required="required">
-    <!--<input class="course-builder__description" [(ngModel)]="course.description" name="name" type="text" required="required">-->
-    <p>COURSE DESCRIPTION:</p>
-    <textarea class="course-builder__description" [(ngModel)]="course.description" placeholder="PLEASE WRITE COURSE DESCRIPTION"></textarea>
+    <h2 class="course-builder__title">{{course.name}}</h2>
 
-    <!--<img [src]="cardImgFile" alt="card image">-->
-    <!--<input type="file" accept='image/*' (change)="onFileSelected($event)">-->
+    <mat-tab-group>
+        <mat-tab label="REPORTS">
 
-    <span style="color:red;" *ngIf="message">{{message}}</span>
-    <img [src]="imgURL" height="200" *ngIf="imgURL">
-    <input #file type="file" accept='image/*' (change)="preview(file.files)" />
+        </mat-tab>
+        <mat-tab label="CONTENT"> Content OF THE COURSE</mat-tab>
+        <mat-tab label="SETTINGS">
+            <p>COURSE NAME:</p>
+            <input class="course-builder__name" [(ngModel)]="course.name" name="name" type="text" required="required">
+            <!--<input class="course-builder__description" [(ngModel)]="course.description" name="name" type="text" required="required">-->
+            <p>COURSE DESCRIPTION:</p>
+            <textarea class="course-builder__description" [(ngModel)]="course.description" placeholder="PLEASE WRITE COURSE DESCRIPTION"></textarea>
+
+            <!--<img [src]="cardImgFile" alt="card image">-->
+            <!--<input type="file" accept='image/*' (change)="onFileSelected($event)">-->
+
+            <p>CARD PREVIEW IMAGE:</p>
+            <span style="color:red;" *ngIf="message">{{message}}</span>
+            <img [src]="imgURL" height="200" *ngIf="imgURL">
+            <input #file type="file" accept='image/*' (change)="preview(file.files)"/>
+        </mat-tab>
+    </mat-tab-group>
 
 </div>
