--- a/src/app/teacher/pages/course-builder/course-builder.component.scss
+++ b/src/app/teacher/pages/course-builder/course-builder.component.scss
@@ -18,6 +18,11 @@
     }
   }
 
+  &__title{
+    font-size: 30px;
+    text-align: center;
+  }
+
   &__name{
     width: 100%;
     text-align: center;
